--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ Thumbs.db
 !.env.example
 !**/.env.example
 
-# # Local document storage (dev only)
-storage/
+# Local document storage (dev only, except seed data)
+storage/*
+!storage/seed/
 
