--- a/modules/agent-go/.env.example
+++ b/modules/agent-go/.env.example
@@ -4,25 +4,46 @@ ENV=development
 
 # Database
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/pina_colada
+RUN_SEEDERS=true # do not add this to prod or bad things will happen
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=
 
 # Auth0
 AUTH0_DOMAIN=your-tenant.auth0.com
-AUTH0_AUDIENCE=https://api.pinacolada.co
-AUTH0_NAMESPACE=https://pinacolada.co
+AUTH0_AUDIENCE=http://localhost:8000
+AUTH0_NAMESPACE=http://localhost:8000
 
 # LLM Providers
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 GEMINI_API_KEY=
 
-# AWS S3
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-S3_BUCKET=
+# Admin Keys (for cost tracking)
+OPENAI_ADMIN_KEY=
+ANTHROPIC_ADMIN_KEY=
+
+# Web Search
+SERPER_API_KEY=
+
+# Pushover
+PUSHOVER_USER=
+PUSHOVER_TOKEN=
+
+# Storage (local)
+STORAGE_PATH=
+STORAGE_BACKEND=local
+
+# SMTP
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_FROM_EMAIL=
 
 # Observability
 LANGFUSE_PUBLIC_KEY=
 LANGFUSE_SECRET_KEY=
-LANGFUSE_HOST=http://localhost:3000
+LANGFUSE_HOST=http://langfuse:3000
 OPENAI_AGENTS_DISABLE_TRACING=true
