removes gemini and uses gpt5-2

--- a/modules/agent-go/.env.example
+++ b/modules/agent-go/.env.example
@@ -17,8 +17,8 @@ AUTH0_NAMESPACE=http://localhost:8000
 
 # LLM Providers
 OPENAI_API_KEY=
+OPENAI_MODEL=gpt-5.2-chat-latest
 ANTHROPIC_API_KEY=
-GEMINI_API_KEY=
 
 # Admin Keys (for cost tracking)
 OPENAI_ADMIN_KEY=
