rename old var groups

--- a/modules/client/azure-pipelines-prod.yml
+++ b/modules/client/azure-pipelines-prod.yml
@@ -20,7 +20,7 @@ resources:
 
 # ---------------- Variables ----------------
 variables:
-  - group: "pina-colada-digital-ocean"
+  - group: "pina-colada-render-prod"
   - name: dockerRegistryServiceConnection
     value: "ghcr-conn"
   - name: owner
