--- a/modules/agent/azure-pipelines-prod.yml
+++ b/modules/agent/azure-pipelines-prod.yml
@@ -20,7 +20,7 @@ resources:
 
 # ---------------- Variables ----------------
 variables:
-  - group: "pina-colada-digital-ocean"
+  - group: "pina-colada-render-prod"
   - group: "pina-colada-supabase-prod"
   - name: dockerRegistryServiceConnection
     value: "ghcr-conn"
