--- a/modules/client/azure-pipelines-prod.yml
+++ b/modules/client/azure-pipelines-prod.yml
@@ -84,82 +84,76 @@ stages:
                 $(tagLatest)
                 $(tagBuildId)
 
-  # ============ PR-only stages: Test environment ============
+  # # ============ PR-only stages: Test environment ============
 
-  - stage: DeployTest
-    displayName: Deploy to Test (Render)
-    dependsOn: Push
-    condition: eq(variables['Build.Reason'], 'PullRequest')
-    jobs:
-      - job: Deploy
-        displayName: Trigger Render Deploy (Test)
-        pool:
-          name: Default
-          demands:
-            - Agent.OS -equals Linux
-        steps:
-          - script: |
-              echo "Saving current test deployment for rollback..."
-              current_image=$(curl -sS -H "Authorization: Bearer $RENDER_API_KEY" \
-                "https://api.render.com/v1/services/$RENDER_SERVICE_ID" | jq -r '.image.imagePath // "none"')
-              echo "Current test image: $current_image"
+  # - stage: DeployTest
+  #   displayName: Deploy to Test (Render)
+  #   dependsOn: Push
+  #   condition: eq(variables['Build.Reason'], 'PullRequest')
+  #   jobs:
+  #     - job: Deploy
+  #       displayName: Trigger Render Deploy (Test)
+  #       pool:
+  #         name: Default
+  #         demands:
+  #           - Agent.OS -equals Linux
+  #       steps:
+  #         - script: |
+  #             echo "Saving current test deployment for rollback..."
+  #             current_image=$(curl -sS -H "Authorization: Bearer $RENDER_API_KEY" \
+  #               "https://api.render.com/v1/services/$RENDER_SERVICE_ID" | jq -r '.image.imagePath // "none"')
+  #             echo "Current test image: $current_image"
 
-              mkdir -p $(Build.ArtifactStagingDirectory)
-              echo "$current_image" > $(Build.ArtifactStagingDirectory)/previous_test_image.txt
-              echo "$(tagBuildId)" > $(Build.ArtifactStagingDirectory)/new_test_tag.txt
-            displayName: "Save current deployment for rollback"
-            env:
-              RENDER_API_KEY: $(RENDER_API_KEY_TEST)
-              RENDER_SERVICE_ID: $(RENDER_SERVICE_ID_CLIENT_TEST)
+  #             mkdir -p $(Build.ArtifactStagingDirectory)
+  #             echo "$current_image" > $(Build.ArtifactStagingDirectory)/previous_test_image.txt
+  #             echo "$(tagBuildId)" > $(Build.ArtifactStagingDirectory)/new_test_tag.txt
+  #           displayName: "Save current deployment for rollback"
+  #           env:
+  #             RENDER_API_KEY: $(RENDER_API_KEY_TEST)
+  #             RENDER_SERVICE_ID: $(RENDER_SERVICE_ID_CLIENT_TEST)
 
-          - publish: $(Build.ArtifactStagingDirectory)
-            artifact: rollback_info_test
-            displayName: "Publish rollback info"
+  #         - publish: $(Build.ArtifactStagingDirectory)
+  #           artifact: rollback_info_test
+  #           displayName: "Publish rollback info"
 
-          - script: |
-              echo "Triggering deployment on Render (Test)..."
-              http_code=$(curl -sS -o /tmp/render_deploy.json -w "%{http_code}" -X POST "$RENDER_DEPLOY_HOOK")
-              echo "POST deploy hook => $http_code"
-              cat /tmp/render_deploy.json
-              case "$http_code" in
-                200|201|202) echo "Test deployment triggered." ;;
-                *) echo "Test deployment failed"; exit 1 ;;
-              esac
-            displayName: "Trigger Render deploy (Test)"
-            env:
-              RENDER_DEPLOY_HOOK: $(RENDER_DEPLOY_HOOK_CLIENT_TEST)
+  #         - script: |
+  #             echo "Triggering deployment on Render (Test)..."
+  #             http_code=$(curl -sS -o /tmp/render_deploy.json -w "%{http_code}" -X POST "$RENDER_DEPLOY_HOOK")
+  #             echo "POST deploy hook => $http_code"
+  #             cat /tmp/render_deploy.json
+  #             case "$http_code" in
+  #               200|201|202) echo "Test deployment triggered." ;;
+  #               *) echo "Test deployment failed"; exit 1 ;;
+  #             esac
+  #           displayName: "Trigger Render deploy (Test)"
+  #           env:
+  #             RENDER_DEPLOY_HOOK: $(RENDER_DEPLOY_HOOK_CLIENT_TEST)
 
-  - stage: Approval
-    displayName: Wait for Approval
-    dependsOn: DeployTest
-    condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
-    jobs:
-      - deployment: WaitForApproval
-        displayName: Approve Production Deploy
-        environment: 'pina-colada-prod'
-        pool:
-          name: Default
-          demands:
-            - Agent.OS -equals Linux
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - script: echo "Approved for production deployment"
-                  displayName: "Approval confirmed"
+  # - stage: Approval
+  #   displayName: Wait for Approval
+  #   dependsOn: DeployTest
+  #   condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
+  #   jobs:
+  #     - deployment: WaitForApproval
+  #       displayName: Approve Production Deploy
+  #       environment: 'pina-colada-prod'
+  #       pool:
+  #         name: Default
+  #         demands:
+  #           - Agent.OS -equals Linux
+  #       strategy:
+  #         runOnce:
+  #           deploy:
+  #             steps:
+  #               - script: echo "Approved for production deployment"
+  #                 displayName: "Approval confirmed"
 
   # ============ Production stages ============
 
   - stage: DeployProd
     displayName: Deploy to Prod (Render)
-    dependsOn:
-      - Push
-      - Approval
-    condition: |
-      or(
-        eq(variables['Build.SourceBranch'], 'refs/heads/master'),
-        succeeded('Approval')
-      )
+    dependsOn: Push
+    condition: succeeded()
     jobs:
       - job: Deploy
         displayName: Trigger Render Deploy (Prod)
