fix: clean supabase cache before migrations

--- a/modules/agent/azure-pipelines-prod.yml
+++ b/modules/agent/azure-pipelines-prod.yml
@@ -263,6 +263,9 @@ stages:
               echo "Setting up migrations..."
               export PATH="$(Agent.ToolsDirectory)/supabase:$PATH"
 
+              # Clean up any cached supabase state from previous runs
+              rm -rf supabase .supabase
+
               supabase init || true
 
               mkdir -p supabase/migrations
