--- a/modules/agent/azure-pipelines-prod.yml
+++ b/modules/agent/azure-pipelines-prod.yml
@@ -218,13 +218,13 @@ stages:
 
   # ============ Production stages ============
 
-  - stage: MigrateProd
-    displayName: Migrate Prod DB
-    dependsOn: Push
-    condition: succeeded()
+  - stage: Migrate
+    displayName: Run Database Migrations
+    dependsOn: Build
+    # Run migrations on all builds (including PRs) to validate schema changes
     jobs:
       - job: Migrate
-        displayName: Apply Supabase Migrations (Prod)
+        displayName: Apply Supabase Migrations
         pool:
           name: Default
           demands:
@@ -232,59 +232,69 @@ stages:
         steps:
           - script: |
               echo "Installing Supabase CLI..."
+              # Use official Supabase CLI installation method
+              # This matches the approach used in supabase/setup-cli@v1 GitHub Action
+              # For self-hosted agents, use a user-writable location
               SUPABASE_DIR=$(Agent.ToolsDirectory)/supabase
               mkdir -p $SUPABASE_DIR
 
+              # Get version from latest release
               VERSION=$(curl -s https://api.github.com/repos/supabase/cli/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
               echo "Installing Supabase CLI version: $VERSION"
 
+              # Download the binary - asset name is supabase_linux_amd64.tar.gz (not versioned in filename)
               curl -L "https://github.com/supabase/cli/releases/download/v${VERSION}/supabase_linux_amd64.tar.gz" -o /tmp/supabase.tar.gz
 
+              # Verify download succeeded
               if [ ! -s /tmp/supabase.tar.gz ]; then
                 echo "Error: Download failed or file is empty"
                 exit 1
               fi
 
+              # Extract
               tar -xzf /tmp/supabase.tar.gz -C $SUPABASE_DIR
 
+              # Verify extraction succeeded
               if [ ! -f $SUPABASE_DIR/supabase ]; then
                 echo "Error: Binary not found after extraction"
                 ls -la $SUPABASE_DIR/
                 exit 1
               fi
 
+              # Make executable
               chmod +x $SUPABASE_DIR/supabase
+
+              # Add to PATH for this job (works for both Microsoft-hosted and self-hosted agents)
               echo "##vso[task.prependpath]$SUPABASE_DIR"
+
+              # Also export PATH in current shell for immediate use (self-hosted agent workaround)
               export PATH="$SUPABASE_DIR:$PATH"
+
+              # Verify installation
+              echo "Verifying installation..."
               $SUPABASE_DIR/supabase --version || supabase --version
             displayName: "Install Supabase CLI"
 
           - script: |
-              echo "Applying migrations via psql..."
+              echo "Setting up migrations..."
+              export PATH="$(Agent.ToolsDirectory)/supabase:$PATH"
 
-              if [ ! -d "modules/agent/migrations" ]; then
+              supabase init || true
+
+              mkdir -p supabase/migrations
+              if [ -d "modules/agent/migrations" ]; then
+                cp -r modules/agent/migrations/*.sql supabase/migrations/ 2>/dev/null || echo "No migrations found"
+                echo "✓ Copied migrations from modules/agent/migrations/ to supabase/migrations/"
+              else
                 echo "⚠️  modules/agent/migrations directory not found"
                 exit 1
               fi
 
-              # Concatenate all .up.sql files in order
-              cd modules/agent/migrations
-              for f in $(ls *.up.sql | sort); do
-                echo "-- Migration: $f"
-                cat "$f"
-                echo ""
-              done > /tmp/all_migrations.sql
-              cd -
-
-              echo "Running $(wc -l < /tmp/all_migrations.sql) lines of SQL..."
-
-              # Use psql with session mode pooler
-              PGPASSWORD="${SUPABASE_DB_PASSWORD}" psql \
-                "host=aws-1-us-east-1.pooler.supabase.com port=6543 dbname=postgres user=postgres.${SUPABASE_PROJECT_ID} sslmode=require" \
-                -f /tmp/all_migrations.sql
-
-              echo "✓ Migrations applied successfully"
-            displayName: "Push Migrations to Supabase (Prod)"
+              echo "Applying database migrations via pooler..."
+              echo SUPABASE_PROJECT_ID
+              echo SUPABASE_DB_PASSWORD
+              supabase db push --db-url "postgres://postgres.${SUPABASE_PROJECT_ID}:${SUPABASE_DB_PASSWORD}@aws-1-us-east-1.pooler.supabase.com:5432/postgres"
+            displayName: "Push Migrations to Supabase"
             continueOnError: false
             workingDirectory: $(System.DefaultWorkingDirectory)
             env:
