--- a/modules/agent/azure-pipelines-prod.yml
+++ b/modules/agent/azure-pipelines-prod.yml
@@ -135,13 +135,13 @@ stages:
               fi
 
               echo "Applying database migrations via pooler..."
-              supabase db push --db-url "postgres://postgres.${SUPABASE_PROJECT_ID}:${SUPABASE_DB_PASSWORD}@aws-1-us-east-1.pooler.supabase.com:5432/postgres"
+              supabase db push --db-url "postgres://postgres.${SUPABASE_PROJECT_ID_PROD}:${SUPABASE_DB_PASSWORD_PROD}@aws-1-us-east-1.pooler.supabase.com:5432/postgres"
             displayName: "Push Migrations to Supabase"
             continueOnError: false
             workingDirectory: $(System.DefaultWorkingDirectory)
             env:
-              SUPABASE_DB_PASSWORD: $(SUPABASE_DB_PASSWORD)
-              SUPABASE_PROJECT_ID: $(SUPABASE_PROJECT_ID)
+              SUPABASE_DB_PASSWORD_PROD: $(SUPABASE_DB_PASSWORD_PROD)
+              SUPABASE_PROJECT_ID_PROD: $(SUPABASE_PROJECT_ID_PROD)
 
   - stage: Push
     displayName: Push Docker Image to GHCR
