--- a/modules/agent/Dockerfile.dev
+++ b/modules/agent/Dockerfile.dev
@@ -1,7 +1,7 @@
 # Dev stage with hot-reload
 FROM golang:1.24-alpine AS dev
 WORKDIR /app
-RUN apk add --no-cache git ca-certificates bash
+RUN apk add --no-cache git ca-certificates bash curl
 RUN go install github.com/air-verse/air@v1.52.3
 EXPOSE 8000
 # start.sh is mounted via volume, ensure it's executable
