--- a/modules/agent/.air.toml
+++ b/modules/agent/.air.toml
@@ -5,6 +5,8 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main ./cmd/agent"
   delay = 1000
+  poll = true
+  poll_interval = 500
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
   exclude_regex = ["_test.go"]
